--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 			<div id="options">
 				<button></button>
 				<button></button>
-				<button></button>
+				<button id="reset">reset</button>
 			</div>
 		</div>
 		<div id="board"></div>
