--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 			<h3>Score: <span id="score"></span></h3>
 			<table id="tileRem"></table>
 			<div id="options">
-				<button></button>
+				<button id="swap">Swap Tiles</button>
 				<button></button>
 				<button id="reset">reset</button>
 			</div>
