board rule progress made

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 			<table id="tileRem"></table>
 			<div id="options">
 				<button id="swap">Swap Tiles</button>
-				<button></button>
+				<button id="submit">Submit</button>
 				<button id="reset">reset</button>
 			</div>
 		</div>
