--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<link rel="stylesheet" href="styles.css">
 </head>
 <body>
-	<header><h1>Scabble</h1></header>
+	<header><h1>Scrabble</h1></header>
 
 	<main>
 		<div id="state">
